# semantic_search

./: .env  .env.example  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  prometheus.yml  pyproject.toml  pytest.ini  test_task_pdf_search.md
config/: app.py  config.py  db.py  milvus.py  ollama.py  security.py
main/: director.py  main.py
main/builders/: __init__.py  base.py  dev.py  dev_builder.py  director.py
main/di/: container.py
src/application/interfaces/adapters/: adapters.py
src/application/interfaces/managers/: transaction_manager.py
src/application/interfaces/repositories/: user_repository.py
src/application/interfaces/repository/: document_repository.py  user_repository.py
src/application/use_cases/: utils.py
src/application/use_cases/document/: crud_document.py  ingest_document.py  search_documents.py
src/application/use_cases/documents/: upload_document.py
src/application/use_cases/user/: get_user.py  user.py
src/domain/entities/: document.py  user.py
src/domain/exceptions/: exceptions.py  users.py
src/infrastructure/database/: db.py
src/infrastructure/database/managers/: transaction_manager.py
src/infrastructure/embeddings/: ollama_service.py
src/infrastructure/pdf/: pdf_parser.py  text_chunker.py
src/infrastructure/prometheus/: metrics.py  tracker.py
src/infrastructure/security/: jwt_handler.py  password_handler.py
src/infrastructure/vector_db/: milvus_service.py
tests/: conftest.py
tests/unit/: test_auth.py  test_crud_docs.py  test_ingest.py  test_search.py
(+26 files in other folders)
