[project]
name = "semantic-search-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.1",
    "black>=26.1.0",
    "cryptography>=46.0.4",
    "dependency-injector>=4.48.3",
    "fastapi>=0.128.0",
    "httpx>=0.27.0",
    "ollama>=0.6.1",
    "passlib[bcrypt]>=1.7.4",
    "prometheus-client>=0.24.1",
    "psycopg>=3.3.2",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "pymilvus>=2.3.4",
    "pymupdf>=1.26.7",
    "pytest>=9.0.2",
    "python-multipart>=0.0.12",
    "sqlalchemy>=2.0.46",
    "structlog>=25.5.0",
    "uvicorn>=0.40.0",
]
